styles.css
/* ... */
.icons-lp .content-info .item {
  text-align: center;
}

.icons-lp .content-info .item h3 {
  color: #ffdb00;
  font-family: "Oswald", sans-serif;
  font-size: 28px;
  font-style: normal;
  font-weight: 400;
  line-height: 28px;
  text-transform: uppercase;
  margin-bottom: 16px;
  text-align: center;
  font-style: italic;
}

@media (max-width: 767px) {
  .icons-lp .content-info .item h3 {
    font-size: 24px;
  }
}

.icons-lp .content-info .item p {
  color: var(--Font-BWG-White, #fff);
  text-align: center;
  font-family: "Oswald", sans-serif;
  font-size: 18px;
  font-style: normal;
  font-weight: 400;
  line-height: 28px;
  margin: 0;
}

@media (max-width: 767px) {
  .icons-lp .content-info .item p {
    font-size: 14px;
  }
}

html {
  scroll-behavior: smooth;
}

.reviews-lp {
  padding: 84px 0;
  position: relative;
  margin-top: -1px;
}

.reviews-lp a {
  color: var(--Primary-Colors-Black, #151515);
  text-align: center;
  font-family: Oswald;
  font-size: 24px;
  font-style: normal;
  font-weight: 600;
  line-height: 24px;
  text-transform: uppercase;
  text-decoration: none;
  border-radius: 4px;
  background: #ffdb00;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 8px;
  margin: 80px auto 0;
  width: -moz-fit-content;
  width: fit-content;
  padding: 20px 55px;
}

@media (max-width: 767px) {
  .reviews-lp a {
    font-size: 16px;
    padding: 11px 55px;
  }
}

.reviews-lp .content-info {
  max-width: 1440px;
  padding-left: 7%;
  padding-right: 7%;
}

.reviews-lp .content-info h3 {
  color: var(--Primary-Colors-Yellow, #ffdb00);
  text-align: center;
  font-family: "Oswald", sans-serif;
  font-size: 20px;
  font-style: normal;
  font-weight: 500;
  line-height: 24px;
  text-transform: uppercase;
  margin: 0;
}

@media (max-width: 767px) {
  .reviews-lp .content-info h3 {
    font-size: 17px;
  }
}

.reviews-lp .content-info h2 {
  color: var(--Primary-Colors-White, var(--Font-BWG-White, #fff));
  text-align: center;
  font-family: "Oswald", sans-serif;
  font-size: 48px;
  font-style: normal;
  font-weight: 500;
  line-height: 56px;
  text-transform: uppercase;
  margin: 0 0 40px;
}

@media (max-width: 767px) {
  .reviews-lp .content-info h2 {
    font-size: 30px;
    line-height: 42px;
  }
}

@keyframes infiniteScroll {
  from {
    transform: translateX(0);
  }

  to {
    transform: translateX(-50%);
  }
}

@keyframes infiniteScrollTwo {
  from {
    transform: translateX(0);
  }

  to {
    transform: translateX(-50%);
  }
}

.reviews-lp .horizontal-scrolling-items {
  font-size: 40px;
  width: 100%;
  position: relative;
}

.reviews-lp .horizontal-scrolling-items:hover {
  animation-play-state: paused;
}

.reviews-lp .horizontal-scrolling-items.two {
  animation-name: infiniteScroll;
  left: 0;
}

/* .reviews-lp .content-reviews { */
/* display: flex; */
/* gap: 22px; */
/* margin: 11px 0; */
/* white-space: nowrap; */
/* width: 100%; */
/* overflow-y: scroll; */
/* -ms-overflow-style: none; */
/* scrollbar-width: none; */
/* } */
/* .reviews-lp .content-reviews::-webkit-scrollbar { */
/* display: none; */
/* } */

.reviews-lp .content-reviews {
  position: relative;
}



.reviews-lp .swiper-button-prev,
.reviews-lp .swiper-button-next {
  --space: -40px;
  color: #fff;
  width: 16px;
  height: 32px;
}

.reviews-lp .swiper-button-prev:after,
.reviews-lp .swiper-button-next:after {
  font-size: 32px;
}

.reviews-lp .swiper-button-prev {
  left: var(--space);
}

.reviews-lp .swiper-button-next {
  right: var(--space);
}

@media screen and (max-width: 1024px) {
  .reviews-lp .swiper-button-prev,
  .reviews-lp .swiper-button-next {
    display: none;
  }
}

.reviews-lp .swiper-pagination {
  bottom: -48px !important;
}

.reviews-lp .swiper-pagination .swiper-pagination-bullet {
  background-color: #D9D9D9;
  opacity: 1;

}

.reviews-lp .swiper-pagination .swiper-pagination-bullet-active {
  background-color: #FFDB00;
}

.reviews-lp .content-reviews .item {
  border-radius: 4px;
  border: 1px solid #3b3b3b;
  background: #1e1e1e;
  min-height: 293px;
}

.reviews-lp .content-reviews .item-inner {
  padding: 24px;
}


@media (max-width: 767px) {

  .reviews-lp .swiper {
    padding-left: 16px;
  }

  .reviews-lp .content-reviews .item .item-inner {
    padding: 8px;
  }
}

.reviews-lp .content-reviews .item h3 {
  min-height: 44px;
  color: #cdcdcd;
  font-family: "Oswald", sans-serif;
  font-size: 20px;
  font-style: normal;
  font-weight: 600;
  line-height: 24px;
  text-align: left;
  margin: 8px 0;
  margin-top: 20px;
}

@media (max-width: 767px) {
  .reviews-lp .content-reviews .item h3 {
    font-size: 16px;
    -webkit-box-orient: vertical;
    width: 100%;
    text-align: left;
    overflow: hidden;
  }
}

.reviews-lp .content-reviews .item p {
  color: #cdcdcd;
  font-family: "Oswald", sans-serif;
  font-size: 14px;
  font-style: normal;
  font-weight: 400;
  line-height: 22px;
  margin: 0;
  overflow: hidden;
  display: -webkit-box;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
}

@media (max-width: 767px) {
  .reviews-lp .content-reviews .item p {
    font-size: 14px;
    overflow: hidden;
    display: -webkit-box;
    -webkit-line-clamp: 4;
    -webkit-box-orient: vertical;
  }
}

.reviews-lp .content-reviews .item .content-head {
  color: var(--Primary-Colors-White, var(--Font-BWG-White, #fff));
  font-family: "Oswald", sans-serif;
  font-size: 20px;
  font-style: normal;
  font-weight: 400;
  line-height: 24px;
  padding-bottom: 8px;
  border-bottom: 1px solid #878787;
  width: 100%;
}

.content-reviews .item .content-head-first {
  display: flex;
  align-items: center;
  justify-content: space-between;

  margin-bottom: 12px;

}

@media (max-width: 767px) {
  .reviews-lp .content-reviews .item .content-head {
    font-size: 16px;
    overflow: hidden;
  }
}

.reviews-lp .content-reviews .item .content-head .name {
  font-weight: 600;
}
/* ... */

